--- a/index.html
+++ b/index.html
@@ -1,30 +1,5 @@
-<!DOCTYPE html>
-<html lang="PT-BR">
-    <head>
+<body>
 
-        <title> Livra Link </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA=Compatible" content="IE-edge">
-        <meta name="description" content="#">
-        <meta name="keywords" content="#">
+    <h1> EM DESENVOLVIMENTO...🔨 </h1>
 
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="#">
-    </head>
-
-    <body>
-        
-        <main>
-
-            <header>
-
-
-
-            </header>
-
-        </main>
-
-    </body>
-
-</html>
+</body>
